// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletHeader > should handle locked balance 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          />
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            10 DARK
          </span>
          <div
            class="ml-1 flex items-baseline space-x-1 text-theme-secondary-700"
          >
            <span
              class="text-lg font-semibold"
            >
              /
            </span>
            <div
              class="flex items-center space-x-2"
              data-testid="WalletHeader__balance-locked"
            >
              <span
                class="whitespace-nowrap text-sm font-semibold"
                data-testid="Amount"
              >
                10 DARK
              </span>
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="lock"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <button
        class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none my-auto ml-3 bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
        data-testid="WalletHeader__locked-balance-button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="lock"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                />
              </g>
            </svg>
          </div>
        </div>
      </button>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should handle locked balance when is ledger 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          >
            <div
              class="inline-block p-1 text-theme-secondary-text"
              data-testid="WalletIcon__Ledger"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="ledger"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            10 DARK
          </span>
          <div
            class="ml-1 flex items-baseline space-x-1 text-theme-secondary-700"
          >
            <span
              class="text-lg font-semibold"
            >
              /
            </span>
            <div
              class="flex items-center space-x-2"
              data-testid="WalletHeader__balance-locked"
            >
              <span
                class="whitespace-nowrap text-sm font-semibold"
                data-testid="Amount"
              >
                10 DARK
              </span>
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="lock"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <button
        class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none my-auto ml-3 bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
        data-testid="WalletHeader__locked-balance-button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="lock"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M3.4 9.3c0-.7.5-1.2 1.2-1.2h10.9c.7 0 1.2.5 1.2 1.2v8.5c0 .7-.5 1.2-1.2 1.2h-11c-.7 0-1.2-.6-1.2-1.2l.1-8.5h0zM5.8 8.1V5c.1-2.3 2.1-4.2 4.5-4 2.2.1 3.9 1.9 4 4v3M10 12.9h0"
                />
              </g>
            </svg>
          </div>
        </div>
      </button>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should render 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          />
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should render amount for wallet in live network 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          />
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
          <span
            class="whitespace-nowrap ml-1"
            data-testid="Amount"
          >
            0 BTC
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should render with incompatible ledger wallet 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          >
            <div
              class="inline-block p-1 text-theme-secondary-text"
              data-testid="WalletIcon__Ledger"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="ledger"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-800 disabled:text-theme-secondary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should show currency delta (-5%) 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          />
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
          <span
            class="ml-2 inline-flex items-center text-theme-danger-500"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <span
              class="ml-1"
            >
              -5%
            </span>
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should show currency delta (5%) 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          />
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
          <span
            class="ml-2 inline-flex items-center text-theme-success-600"
          >
            <div
              class="css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-up-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M1 6.975l3.8-3.8c.1-.1.3-.1.4 0l3.8 3.8"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <span
              class="ml-1"
            >
              5%
            </span>
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should show modifiers 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          >
            <div
              class="inline-block p-1 text-theme-secondary-text"
              data-testid="WalletIcon__Ledger"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="ledger"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <div
              class="inline-block p-1 text-theme-secondary-text"
              data-testid="WalletIcon__Multisignature"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="multi-signature"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M3.1 9.65c1.1 0 2.1-1 2.1-2.1s-1-2.1-2.1-2.1-2.1 1-2.1 2.1.9 2.1 2.1 2.1h0zM6.4 13.25c-.8-1.8-2.9-2.6-4.7-1.9-.2.1-.5.2-.7.4M16.9 9.65c-1.1 0-2.1-1-2.1-2.1s1-2.1 2.1-2.1 2.1 1 2.1 2.1-.9 2.1-2.1 2.1h0zM13.6 13.25c.8-1.8 2.9-2.6 4.7-1.9.2.1.5.2.7.4"
                    />
                    <g>
                      <path
                        d="M14.75 15.75c-.3-2.6-2.8-4.5-5.4-4.1-2.2.3-3.8 2-4.1 4.1M10.003 9.65c1.5 0 2.7-1.2 2.7-2.7s-1.2-2.7-2.7-2.7-2.7 1.2-2.7 2.7h0c-.1 1.5 1.1 2.7 2.7 2.7z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy-key"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M6 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM6 7v10H3M6 13H4M17 12.45c0-.197 0-.394-.19-.59l-1.513-1.573a.992.992 0 0 0-.567-.196h-3.973 0a.782.782 0 0 0-.757.786v7.337c0 .393.315.786.757.786h5.612-.063c.379 0 .694-.328.694-.786v-5.765z"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader > should use empty string in clipboard copy if publickey is undefined 1`] = `
<DocumentFragment>
  <header
    class="flex flex-col items-center lg:flex-row"
    data-testid="WalletHeader"
  >
    <div
      class="h-13 flex w-full flex-row items-center justify-between lg:w-fit lg:flex-row lg:pr-6"
    >
      <div
        class="-my-2 mr-4 flex w-full flex-col overflow-hidden py-2 lg:my-0 lg:mr-0 lg:py-0"
      >
        <div
          class="flex items-center space-x-2 text-theme-secondary-text lg:gap-2"
        >
          <span
            class="text-sm font-semibold"
            data-testid="WalletHeader__name"
          >
            ARK Wallet 1
          </span>
          <div
            class="flex items-center space-x-1"
          />
        </div>
        <div
          class="flex w-full items-center space-x-4"
        >
          <span
            class="min-w-0"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden no-ligatures whitespace-nowrap text-lg font-semibold text-white"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </span>
          <div
            class="mb-1 flex items-end space-x-3 text-theme-secondary-text"
          >
            <button
              class="ring-focus relative focus:outline-none"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="hover:text-theme-secondary-500 css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="copy"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                    />
                    <path
                      d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                    />
                  </g>
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-6 self-stretch border-t border-theme-secondary-800 lg:my-0 lg:border-r"
    />
    <div
      class="h-13 flex w-full items-center lg:w-full lg:pl-6"
    >
      <div
        class="mr-auto flex flex-col"
      >
        <div
          class="flex items-center text-sm font-semibold text-theme-secondary-text"
        >
          <span>
            Balance:
          </span>
        </div>
        <div
          class="flex items-center"
        >
          <span
            class="whitespace-nowrap text-lg font-semibold text-white"
            data-testid="Amount"
          >
            33.75089801 DARK
          </span>
        </div>
      </div>
      <div
        class="flex items-center justify-center gap-3"
      >
        <button
          aria-busy="false"
          class="css-1tz7btt"
          data-testid="WalletHeader__refresh"
          type="button"
        >
          <div
            class=" css-v0ob3f"
            height="16"
            style="animation-direction: reverse;"
            width="16"
          >
            <svg
              id="arrow-rotate-left"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.01 20c1.407 0 2.81-.296 4.127-.883a9.766 9.766 0 0 0 5.232-5.576C21.29 8.323 18.675 2.538 13.54.645 9.827-.715 5.824.11 3.049 2.793v-.87a1.129 1.129 0 1 0-2.26 0V5.52a1.13 1.13 0 0 0 .282.743 1.123 1.123 0 0 0 .775.382c.027.001.044 0 .08.002h3.587a1.129 1.129 0 1 0 0-2.259H4.65c2.147-2.05 5.237-2.674 8.11-1.622 3.965 1.462 5.98 5.946 4.49 9.995a7.521 7.521 0 0 1-4.033 4.294 7.86 7.86 0 0 1-5.96.191 7.656 7.656 0 0 1-4.31-3.998 1.129 1.129 0 1 0-2.056.938 9.94 9.94 0 0 0 5.588 5.18A10.18 10.18 0 0 0 10.01 20z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
        <button
          class="css-1tz7btt"
          data-testid="WalletHeader__star-button"
          type="button"
        >
          <div
            class="text-theme-warning-400 css-v0ob3f"
            height="16"
            width="16"
          >
            <svg
              id="star-filled"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M10.558 1.411l2.711 5.273 5.12.497c.603.1.804.697.402 1.094l-4.217 4.179 1.607 5.67c.1.498-.402 1.094-1.004.796l-5.221-2.686-5.12 2.587c-.302.198-1.105-.1-.904-.796l1.606-5.77-4.317-3.98c-.3-.397-.401-.994.402-1.094l5.12-.497L9.454 1.41c.301-.597.803-.497 1.104 0h0z"
                fill="currentColor"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
      <div>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded text-white bg-theme-primary-600 hover:bg-theme-primary-700 my-auto ml-3"
          data-testid="WalletHeader__send-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Send
          </div>
        </button>
      </div>
      <div
        class="my-auto ml-3"
        data-testid="WalletHeader__more-button"
      >
        <div
          class="static sm:relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <button
              class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none bg-theme-secondary-800 text-white hover:bg-theme-primary-700"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="ellipsis-vertical"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="16.994"
                        r="2.006"
                      />
                      <circle
                        cx="10"
                        cy="3"
                        r="2"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        r="2"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
